# press-cut-app

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build_release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: icons.html  logback.xml  open_source_licenses.html
app/src/main/c/: CMakeLists.txt  direct_byte_buffer.c  fs_stamp_collection_repository.c  fs_stamp_repository.c  fs_webp_stamp_repository.c  fsstamps.c  struuu.c
app/src/main/java/ua/com/radiokot/camerapp/: CameraApp.kt  SAF.kt
app/src/main/java/ua/com/radiokot/camerapp/about/ui/: AboutNavigation.kt  AboutScreen.kt  HtmlActivity.kt
app/src/main/java/ua/com/radiokot/camerapp/adjustments/: AdjustmentsModule.kt
app/src/main/java/ua/com/radiokot/camerapp/adjustments/domain/: ImageAdjustment.kt
app/src/main/java/ua/com/radiokot/camerapp/adjustments/ui/: AdjustmentsController.kt  AdjustmentsControllerItem.kt  ImageAdjustmentsControllerViewModel.kt  ValueDial.kt
app/src/main/java/ua/com/radiokot/camerapp/collectionselection/: CollectionSelectionModule.kt
app/src/main/java/ua/com/radiokot/camerapp/collectionselection/ui/: SelectDestinationCollectionContract.kt  SelectDestinationCollectionDialog.kt  SelectDestinationCollectionDialogMessage.kt  SelectDestinationCollectionDialogViewModel.kt  SelectDestinationCollectionNavigation.kt  SelectDestinationCollectionRequest.kt
app/src/main/java/ua/com/radiokot/camerapp/cut/: CutModule.kt
app/src/main/java/ua/com/radiokot/camerapp/cut/domain/: ImageAdjustment.kt
app/src/main/java/ua/com/radiokot/camerapp/cut/ui/: AdjustmentControllerItem.kt  AdjustmentsController.kt  ImageAdjustmentsControllerViewModel.kt  NewStampActivity.kt  StampCutScreen.kt  StampCutScreenViewModel.kt  StampDiscardConfirmationDialog.kt  StampSaveScreen.kt  StampSaveScreenViewModel.kt
app/src/main/java/ua/com/radiokot/camerapp/envelopes/: EnvelopesModule.kt
app/src/main/java/ua/com/radiokot/camerapp/envelopes/data/: CpCreateEnvelopeShareIntentUseCase.kt  CpCreateSendEnvelopeIntentUseCase.kt  CreateOneStampEnvelopeUseCase.kt  EnvelopeContentProvider.kt  FsAddStampsFromOneStampEnvelopeUseCase.kt  FsAddStampsFromOneStampPackageUseCase.kt  FsCreateOneStampEnvelopeUseCase.kt  FsGetOneStampEnvelopePreviewUseCase.kt  OneStampEnvelope.kt  OneStampPackage.kt  SharedEnvelopeContentProvider.kt
app/src/main/java/ua/com/radiokot/camerapp/envelopes/domain/: AddStampsFromEnvelopeUseCase.kt  AddStampsFromOneStampEnvelopeUseCase.kt  AddStampsFromOneStampPackageUseCase.kt  CreateEnvelopeShareIntentUseCase.kt  CreateEnvelopeUseCase.kt  CreateSendEnvelopeIntentUseCase.kt  EnvelopePreviewResult.kt  (+4 more)
app/src/main/java/ua/com/radiokot/camerapp/intro/: IntroModule.kt
app/src/main/java/ua/com/radiokot/camerapp/io/: IoModule.kt
app/src/main/java/ua/com/radiokot/camerapp/posters/: PostersModule.kt
app/src/main/java/ua/com/radiokot/camerapp/stamps/: StampsModule.kt
app/src/main/java/ua/com/radiokot/camerapp/ui/: AppTheme.kt  Fonts.kt  LeButton.kt  LeToast.kt  NoProgressiveLandscapistRequestBuilder.kt  PaperBackground.kt  ProgressBar.kt  SnapFling.kt  Vignette.kt
app/src/main/java/ua/com/radiokot/camerapp/util/: ByteBuffer.kt  ContentProvider.kt  Iso8601OffsetDateTimeSerializer.kt  Landscapist.kt  Logging.kt  NativeLibrary.kt  PaddingValues.kt  ShareSheetShareEventReceiver.kt  StableHolder.kt  ZipInputStream.kt
app/src/main/res/drawable/: ic_more_hor_stroked.xml  ok_by_pronto_illustration_from_noun_project.xml  toast_background_stroke.xml
app/src/main/res/drawable-night/: ic_more_hor_stroked.xml
app/src/main/res/layout/: view_toast.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 10.txt  11.txt  12.txt  6.txt  7.txt  8.txt  9.txt
gradle/wrapper/: gradle-wrapper.properties
stamp-native/: CMakeLists.txt  exif.c  exif.h  file.c  file.h  main.c  stamp.c  stamp.h  stamp_collection.c  stamp_collection.h  xmp.c  xmp.h
(+94 files in other folders)
